# microblog

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  start_app.sh
config/: dev.py
migrations/versions/: 0f576fe022df_.py  4cbf356c5eae_.py  dfb6a4069c53_.py  f08f098d2cc7_.py
project/: __init__.py  blueprints_registry.py
project/api/comment/: __init__.py  controller.py  interface.py  model.py  schema.py
project/api/follow/: __init__.py  controller.py  interface.py  model.py  schema.py
project/api/like/: __init__.py  controller.py  interface.py  model.py  schema.py
project/api/post/: __init__.py  controller.py  interface.py  model.py  schema.py  service.py
project/api/user/: __init__.py  controller.py  interface.py  model.py  schema.py  service.py
