[tool.poetry]
name = "microblog"
version = "0.1.0"
description = ""
authors = ["MeLio01 <soumya01raj@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.3"
Flask-Migrate = "^3.1.0"
Flask-SQLAlchemy = "^2.5.1"
python-dotenv = "^0.20.0"
Flask-Cors = "^3.0.10"
marshmallow = "^3.15.0"
Werkzeug = "^2.0.0"
urllib3 = "^1.26.9"
psycopg2-binary = "^2.9.3"
gunicorn = "^20.1.0"


[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
